Fix margin on mobile

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -136,6 +136,7 @@ ul.skill-lists {
     position: relative;
     padding-top: 4em;
     padding-right: 0;
+    margin-bottom: 4em;
   }
 }
 
